--- a/index.html
+++ b/index.html
@@ -9,6 +9,71 @@
     <title>RPG 2: Electric Boogalo</title>
   </head>
   <body>
-
+    <div class="container" id="startContainer">
+      <div class="row">
+        <div class="col-xs-5" id="bardColumn">
+          <!-- <img src="images/bard.jpg" id="bardImage" alt=""/> -->
+        </div>
+        <div class="col-xs-6 col-xs-offset-1" id="backStoryColumn">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <button type="submit" id="startButton" name="button">Do you accept this quest?</button>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="characterContainer">
+      <div class="row">
+        <h1>Choose your character</h1>
+      </div>
+      <form id="formCharacter">
+        <div class="row" id="topRow">
+          <div class="col-xs-6">
+            <h2>Player 1</h2>
+            <img src="#" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <h4>attack: Face Puncher</h4>
+            <input type="radio" name="character" value="Player1">
+          </div>
+          <div class="col-xs-6">
+            <h2>Player 2</h2>
+            <img src="#" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <h4>attack: Mind Melter</h4>
+            <input type="radio" name="character" value="Player2">
+          </div>
+        </div>
+        <div class="row" id="bottomRow">
+          <div class="col-xs-6">
+            <h2>Player 3</h2>
+            <img src="#" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <h4>attack: 360 No Scope</h4>
+            <input type="radio" name="character" value="Player3">
+          </div>
+          <div class="col-xs-6">
+            <h2>Player 4</h2>
+            <img src="#" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <h4>attack: Magic Duster</h4>
+            <input type="radio" name="character" value="Player4">
+          </div>
+        </div>
+        <div class="row">
+          <button type="submit" name="button">Begin your journey!</button>
+        </div>
+      </form>
+    </div>
+    <div class="container" id="mapContainer">
+      
+    </div>
   </body>
 </html>
