--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </form>
     </div>
     <div class="container" id="mapContainer">
-
+      <h1>Map Header</h1>
     </div>
   </body>
 </html>
