--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
       </form>
     </div>
     <div class="container" id="mapContainer">
-
+      <h1>Map Header</h1>
+    </div>
+    <div class="test">
+      <p>
+        TESTTESTESTESTESTETESTESTESESTESTESTESTEST
+      </p>
+      <ul>
+        <li>this is a test</li>
+      </ul>
     </div>
   </body>
 </html>
