--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>RPG 2: Electric Boogalo</title>
@@ -11,20 +12,31 @@
   <body>
     <div class="container" id="startContainer">
       <div class="row">
-        <div class="col-xs-5" id="bardColumn">
-          <!-- <img src="images/bard.jpg" id="bardImage" alt=""/> -->
-        </div>
-        <div class="col-xs-6 col-xs-offset-1" id="backStoryColumn">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-          <button type="submit" id="startButton" name="button">Do you accept this quest?</button>
+        <div class="col-xs-6 col-xs-offset-3" id="backStoryColumn">
+          <div class="row">
+            <div class="col-xs-6">
+              <div id="bardImage">
+                <img src="images/bard.jpg" alt="bard" />
+              </div>
+            </div>
+            <div id="raiseCol" class="col-xs-6">
+              <h1>The Bard</h1>
+            </div>
+          </div>
+
+
+          <div>
+            <p id="bardTale">
+              Ho adventurer, come sit by the hearth. I have a proposition for you. Dangerous creatures and foes from a land far away have raided our lands. Our people are in danger! We are simply farmers and merchants, not warriors. We need a champion, and you have the look of one. So, what say you? Will you accept this quest and lend us your aid?
+              <button type="submit" id="startButton" name="button">Yes</button>
+            </p>
+          </div>
         </div>
       </div>
     </div>
     <div class="container" id="characterContainer">
       <div class="row">
-        <h1>Choose your character</h1>
+        <h1>Who are you?</h1>
       </div>
       <form id="formCharacter">
         <div class="row" id="topRow">
