--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
     <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RPG 2: Electric Boogalo</title>
   </head>
   <body>
     <div class="container" id="startContainer">
       <div class="row">
-        <div class="col-xs-6 col-xs-offset-3" id="backStoryColumn">
+        <div class="col-md-6 col-md-offset-3" id="backStoryColumn">
           <div class="row">
-            <div class="col-xs-6">
+            <div class="col-md-6">
               <div id="bardImage">
                 <img src="images/bard.jpg" alt="bard" />
               </div>
             </div>
-            <div id="raiseCol" class="col-xs-6">
+            <div id="raiseCol" class="col-md-6">
               <h1>The Bard</h1>
             </div>
           </div>
+          <div class="row">
+            <div class="col-md-12">
+              <p id="bardTale">
+                Ho adventurer, come sit by the hearth. I have a proposition for you. Dangerous creatures and foes from a land far away have raided our lands. Our people are in danger! We are simply farmers and merchants, not warriors. We need a champion, and you have the look of one. So, what say you? Will you accept this quest and lend us your aid?
+                <button type="submit" id="startButton" name="button">Yes</button>
+              </p>
 
-
-          <div>
-            <p id="bardTale">
-              Ho adventurer, come sit by the hearth. I have a proposition for you. Dangerous creatures and foes from a land far away have raided our lands. Our people are in danger! We are simply farmers and merchants, not warriors. We need a champion, and you have the look of one. So, what say you? Will you accept this quest and lend us your aid?
-              <button type="submit" id="startButton" name="button">Yes</button>
-            </p>
+            </div>
           </div>
         </div>
       </div>
