replace some images and style map grid.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container" id="startContainer">
       <div class="row">
         <div class="col-xs-5" id="bardColumn">
-          <!-- <img src="images/bard.jpg" id="bardImage" alt=""/> -->
+          <!-- <img src="images/bard.jpg" id="bardImage" /> -->
         </div>
         <div class="col-xs-6 col-xs-offset-1" id="backStoryColumn">
           <p>
@@ -30,7 +30,7 @@
         <div class="row" id="topRow">
           <div class="col-xs-6">
             <h2>Player 1</h2>
-            <img src="#" alt="" />
+            <img src="#"  />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -39,7 +39,7 @@
           </div>
           <div class="col-xs-6">
             <h2>Player 2</h2>
-            <img src="#" alt="" />
+            <img src="#"  />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -50,7 +50,7 @@
         <div class="row" id="bottomRow">
           <div class="col-xs-6">
             <h2>Player 3</h2>
-            <img src="#" alt="" />
+            <img src="#"  />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -59,7 +59,7 @@
           </div>
           <div class="col-xs-6">
             <h2>Player 4</h2>
-            <img src="#" alt="" />
+            <img src="#"  />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -73,7 +73,37 @@
       </form>
     </div>
     <div class="container" id="mapContainer">
-      <h1>Map Header</h1>
+      <div class="row" id="mapRow1">
+        <div class="col-xs-6" id="mapRow1Column1">
+        </div>
+        <div class="col-xs-6" id="mapRow1Column2">
+          <img class="mapLocations" src="images/castle.png" id="oceanCastle"/>
+        </div>
+      </div>
+      <div class="row" id="mapRow2">
+        <div class="col-xs-3 col-xs-offset-1" id="mapRow2Column1">
+          <img class="mapLocations" src="images/village.jpg" id="village"/>
+        </div>
+        <div class="col-xs-4" id="mapRow2Column2">
+          <img class="mapLocations" src="images/house-over-water.png" id="houseOverWater"/>
+        </div>
+      </div>
+      <div class="row" id="mapRow3">
+        <div class="col-xs-3" id="mapRow3Column1">
+          <img class="mapLocations" src="images/ghost-house.gif" id="ghostHouse"/>
+        </div>
+        <div class="col-xs-2 col-xs-offset-1" id="mapRow3Column2">
+          <img class="mapLocations" src="images/boat.png" id="boat"/>
+        </div>
+        <div class="col-xs-3 col-xs-offset-3" id="mapRow3Column3">
+          <img class="mapLocations" src="images/tower.png" id="tower"/>
+        </div>
+      </div>
+      <div class="row" id="mapRow4">
+        <div class="col-xs-4 col-xs-offset-8" id="mapRow4Column1">
+          <img class="mapLocations" src="images/ufo.gif" id="ufo"/>
+        </div>
+      </div>
     </div>
   </body>
 </html>
