--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
   </head>
   <body>
     <div class="container" id="startContainer">
-      <div class="row">
-        <div class="col-md-5 col-md-offset-3" id="backStoryColumn">
-          <div class="row">
-            <div class="col-md-6">
-              <div id="bardImage">
-                <img src="images/bard.jpg" alt="bard" />
-              </div>
-            </div>
-            <div id="raiseCol" class="col-md-6">
-              <h1>The Bard</h1>
-            </div>
+      <div class="row" id="raiseCol">
+        <div class="col-md-6">
+          <div id="bardImage">
+            <img src="images/bard.jpg" alt="bard" />
           </div>
+        </div>
+        <div class="col-md-6">
+          <h1>The Bard</h1>
+        </div>
+      </div>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12" id="colTale">
               <p id="bardTale">
                 Ho adventurer, come sit by the hearth. I have a proposition for you. Dangerous creatures and foes from a land far away have raided our lands. Our people are in danger! We are simply farmers and merchants, not warriors. We need a champion, and you have the look of one. So, what say you? Will you accept this quest and lend us your aid?
                 <button type="submit" id="startButton" name="button">Yes</button>
@@ -33,8 +31,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
     <div class="container" id="characterContainer">
       <div class="row">
         <h1>Who are you?</h1>
