--- a/index.html
+++ b/index.html
@@ -18,26 +18,35 @@
             <img src="images/bard.jpg" alt="bard" />
           </div>
         </div>
-        <div class="col-md-6">
+        <div id="moveBardTitle" class="col-md-6 ">
           <h1>The Bard</h1>
         </div>
       </div>
           <div class="row">
-            <div class="col-md-12" id="colTale">
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4" id="colTale">
               <p id="bardTale">
                 Ho adventurer, come sit by the hearth. I have a proposition for you. Dangerous creatures and foes from a land far away have raided our lands. Our people are in danger! We are simply farmers and merchants, not warriors. We need a champion, and you have the look of one. So, what say you? Will you accept this quest and lend us your aid?
                 <button type="submit" id="startButton" name="button">Yes</button>
               </p>
             </div>
+            <div class="col-md-4">
+
+            </div>
           </div>
         </div>
     <div class="container" id="characterContainer">
-      <div class="row">
+      <div id="moveCharacterTitle" class="row">
         <h1>Who are you?</h1>
       </div>
       <form id="formCharacter">
         <div class="row" id="topRow">
-          <div class="col-xs-6">
+          <div class="col-xs-4">
+
+          </div>
+          <div class="col-xs-2">
             <h2>Player 1</h2>
             <img src="#"  />
             <p>
@@ -46,7 +55,7 @@
             <h4>attack: Face Puncher</h4>
             <input type="radio" name="character" value="Player1">
           </div>
-          <div class="col-xs-6">
+          <div class="col-xs-2">
             <h2>Player 2</h2>
             <img src="#"  />
             <p>
@@ -55,9 +64,15 @@
             <h4>attack: Mind Melter</h4>
             <input type="radio" name="character" value="Player2">
           </div>
+          <div class="col-xs-4">
+
+          </div>
         </div>
         <div class="row" id="bottomRow">
-          <div class="col-xs-6">
+          <div class="col-xs-4">
+
+          </div>
+          <div class="col-xs-2">
             <h2>Player 3</h2>
             <img src="#"  />
             <p>
@@ -66,7 +81,7 @@
             <h4>attack: 360 No Scope</h4>
             <input type="radio" name="character" value="Player3">
           </div>
-          <div class="col-xs-6">
+          <div class="col-xs-2">
             <h2>Player 4</h2>
             <img src="#"  />
             <p>
@@ -75,8 +90,11 @@
             <h4>attack: Magic Duster</h4>
             <input type="radio" name="character" value="Player4">
           </div>
+          <div class="col-xs-4">
+
+          </div>
         </div>
-        <div class="row">
+        <div id="characterButton" class="row">
           <button type="submit" name="button">Begin your journey!</button>
         </div>
       </form>
@@ -111,6 +129,92 @@
       <div class="row" id="mapRow4">
         <div class="col-xs-4 col-xs-offset-8" id="mapRow4Column1">
           <img class="mapLocations" src="images/ufo.gif" id="ufo"/>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="villageContainer">
+      <div class="row">
+        <div class="col-md-9" id="villageLocation">
+          <div class="row">
+            <div id="playerAppear" class="col-xs-2">
+              <!-- where hero is -->
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="hauntedContainer">
+      <div class="row">
+        <div class="col-md-9" id="hauntedLocation">
+          <div class="row">
+            <div id="playerAppear" class="col-xs-2">
+              <!-- where hero is -->
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="towerContainer">
+      <div class="row">
+        <div class="col-md-9" id="towerLocation">
+          <div class="row">
+            <div id="playerAppear" class="col-xs-2">
+              <!-- where hero is -->
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="trailerContainer">
+      <div class="row">
+        <div class="col-md-9" id="trailerLocation">
+          <img id="locationUfo" src="images/ufo2.png" alt="" />
+          <div class="row">
+            <div id="playerAppear" class="col-xs-2">
+              <!-- where hero is -->
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="castleContainer">
+      <div class="row">
+        <div class="col-md-9" id="castleLocation">
+          <div class="row">
+            <div id="playerAppear" class="col-xs-2">
+              <!-- where hero is -->
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+            <div class="col-xs-5">
+
+            </div>
+          </div>
         </div>
       </div>
     </div>
