add a prototype that simulates a dice roll and a prototype that uses item to heal character

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row" id="raiseCol">
         <div class="col-md-6">
           <div id="bardImage">
-            <img src="images/bard.jpg" alt="bard" />
+            <img src="../images/bard.jpg" alt="bard" />
           </div>
         </div>
         <div class="col-md-6">
@@ -44,7 +44,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
             <h4>attack: Face Puncher</h4>
-            <input type="radio" name="character" value="Player1">
+            <input type="radio" name="character" value="Tinks">
           </div>
           <div class="col-xs-6">
             <h2>Player 2</h2>
@@ -53,7 +53,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
             <h4>attack: Mind Melter</h4>
-            <input type="radio" name="character" value="Player2">
+            <input type="radio" name="character" value="Quill">
           </div>
         </div>
         <div class="row" id="bottomRow">
@@ -64,7 +64,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
             <h4>attack: 360 No Scope</h4>
-            <input type="radio" name="character" value="Player3">
+            <input type="radio" name="character" value="Tex">
           </div>
           <div class="col-xs-6">
             <h2>Player 4</h2>
@@ -73,7 +73,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
             <h4>attack: Magic Duster</h4>
-            <input type="radio" name="character" value="Player4">
+            <input type="radio" name="character" value="Stunner">
           </div>
         </div>
         <div class="row">
