add back button and change playerAppear from a an id to a class

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         </div>
         <div class="col-xs-3 col-xs-offset-3" id="mapRow3Column3">
           <img class="mapLocations" src="images/tower.png" id="tower"/>
+          <!-- <button type="submit" name="button" id="towerButton"></button> -->
         </div>
       </div>
       <div class="row" id="mapRow4">
@@ -132,87 +133,92 @@
         </div>
       </div>
     </div>
-    <div class="container" id="villageContainer">
+    <div class="container" id="locationContainer">
       <div class="row">
-        <div class="col-md-9" id="villageLocation">
-          <div class="row">
-            <div id="playerAppear" class="col-xs-2">
-              <!-- where hero is -->
-            </div>
-            <div class="col-xs-5">
+        <button id="back" type="button" name="button">BUTTON</button>
+      </div>
+      <div class="container locationHide" id="villageContainer">
+        <div class="row">
+          <div class="col-md-9" id="villageLocation">
+            <div class="row">
+              <div class="playerAppear" class="col-xs-2">
+                <!-- where hero is -->
+              </div>
+              <div class="col-xs-5">
 
-            </div>
-            <div class="col-xs-5">
+              </div>
+              <div class="col-xs-5">
 
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container" id="hauntedContainer">
-      <div class="row">
-        <div class="col-md-9" id="hauntedLocation">
-          <div class="row">
-            <div id="playerAppear" class="col-xs-2">
-              <!-- where hero is -->
-            </div>
-            <div class="col-xs-5">
+      <div class="container locationHide" id="hauntedContainer">
+        <div class="row">
+          <div class="col-md-9" id="hauntedLocation">
+            <div class="row">
+              <div class="playerAppear" class="col-xs-2">
+                <!-- where hero is -->
+              </div>
+              <div class="col-xs-5">
 
-            </div>
-            <div class="col-xs-5">
+              </div>
+              <div class="col-xs-5">
 
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container" id="towerContainer">
-      <div class="row">
-        <div class="col-md-9" id="towerLocation">
-          <div class="row">
-            <div id="playerAppear" class="col-xs-2">
-              <!-- where hero is -->
-            </div>
-            <div class="col-xs-5">
+      <div class="container locationHide" id="towerContainer">
+        <div class="row">
+          <div class="col-md-9" id="towerLocation">
+            <div class="row">
+              <div class="playerAppear" class="col-xs-2">
+                <!-- where hero is -->
+              </div>
+              <div class="col-xs-5">
 
-            </div>
-            <div class="col-xs-5">
+              </div>
+              <div class="col-xs-5">
 
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container" id="trailerContainer">
-      <div class="row">
-        <div class="col-md-9" id="trailerLocation">
-          <img id="locationUfo" src="images/ufo2.png" alt="" />
-          <div class="row">
-            <div id="playerAppear" class="col-xs-2">
-              <!-- where hero is -->
-            </div>
-            <div class="col-xs-5">
+      <div class="container locationHide" id="trailerContainer">
+        <div class="row">
+          <div class="col-md-9" id="trailerLocation">
+            <img id="locationUfo" src="images/ufo2.png" alt="" />
+            <div class="row">
+              <div class="playerAppear" class="col-xs-2">
+                <!-- where hero is -->
+              </div>
+              <div class="col-xs-5">
 
-            </div>
-            <div class="col-xs-5">
+              </div>
+              <div class="col-xs-5">
 
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container" id="castleContainer">
-      <div class="row">
-        <div class="col-md-9" id="castleLocation">
-          <div class="row">
-            <div id="playerAppear" class="col-xs-2">
-              <!-- where hero is -->
-            </div>
-            <div class="col-xs-5">
+      <div class="container locationHide" id="castleContainer">
+        <div class="row">
+          <div class="col-md-9" id="castleLocation">
+            <div class="row">
+              <div class="playerAppear" class="col-xs-2">
+                <!-- where hero is -->
+              </div>
+              <div class="col-xs-5">
 
-            </div>
-            <div class="col-xs-5">
+              </div>
+              <div class="col-xs-5">
 
+              </div>
             </div>
           </div>
         </div>
