--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row" id="raiseCol">
         <div class="col-md-6">
           <div id="bardImage">
-            <img src="../images/bard.jpg" alt="bard" />
+            <img src="images/bard.jpg" alt="bard" />
           </div>
         </div>
         <div id="moveBardTitle" class="col-md-6 ">
@@ -43,54 +43,62 @@
       </div>
       <form id="formCharacter">
         <div class="row" id="topRow">
-          <div class="col-xs-4">
+          <div class="col-xs-3">
 
           </div>
+          <div class="col-xs-1" id="Tinks">
+            <img class="tinyImages" src="images/druid_burned.png"  />
+          </div>
           <div class="col-xs-2">
-            <h2>Player 1</h2>
-            <img src="#"  />
+            <h2>Tinks</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <h4>attack: Face Puncher</h4>
+            <h4>attack: Kale Fart</h4>
             <input type="radio" name="character" value="Tinks">
           </div>
           <div class="col-xs-2">
-            <h2>Player 2</h2>
-            <img src="#"  />
+            <h2>Ned</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <h4>attack: Mind Melter</h4>
-            <input type="radio" name="character" value="Quill">
+            <h4>attack: Dead Smell</h4>
+            <input type="radio" name="character" value="Ned">
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-1" id="Ned">
+            <img class="tinyImages" src="images/necromancer_burned.png"  />
+          </div>
+          <div class="col-xs-3">
 
           </div>
         </div>
         <div class="row" id="bottomRow">
-          <div class="col-xs-4">
+          <div class="col-xs-3">
 
           </div>
-          <div class="col-xs-2">
-            <h2>Player 3</h2>
-            <img src="#"  />
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <h4>attack: 360 No Scope</h4>
-            <input type="radio" name="character" value="Tex">
+          <div class="col-xs-1" id="Stunner">
+            <img class="tinyImages" src="images/taxidermy-pikachu_burned.png"  />
           </div>
           <div class="col-xs-2">
-            <h2>Player 4</h2>
-            <img src="#"  />
+            <h2>Stunner</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <h4>attack: Magic Duster</h4>
+            <h4>attack: 360 NoScope</h4>
             <input type="radio" name="character" value="Stunner">
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-2">
+            <h2>Tex</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <h4>attack: Guacamole Staff</h4>
+            <input type="radio" name="character" value="Tex">
+          </div>
+          <div class="col-xs-1" id="Tex">
+            <img class="tinyImages" src="images/cleric_burned.png"  />
+          </div>
+          <div class="col-xs-3">
 
           </div>
         </div>
