--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
             <h4>attack: Kale Fart</h4>
-            <input type="radio" name="character" value="Tinks">
+            <input type="radio" name="character" value="Tinks" required>
           </div>
           <div class="col-xs-2">
             <h2>Ned</h2>
@@ -149,13 +149,16 @@
         <div class="row">
           <div class="col-md-9" id="villageLocation">
             <div class="row">
-              <div class="playerAppear" class="col-xs-2">
-                <!-- where hero is -->
+              <div id="villagePlayerAppear" class="col-xs-2">
+                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
-              <div class="col-xs-5">
+              <div id="villageEnemyAppear"class="col-xs-5">
 
               </div>
             </div>
@@ -166,13 +169,16 @@
         <div class="row">
           <div class="col-md-9" id="hauntedLocation">
             <div class="row">
-              <div class="playerAppear" class="col-xs-2">
-                <!-- where hero is -->
+              <div id="hauntedPlayerAppear" class="col-xs-2">
+                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
-              <div class="col-xs-5">
+              <div id="hauntedEnemyAppear"class="col-xs-5">
 
               </div>
             </div>
@@ -183,13 +189,16 @@
         <div class="row">
           <div class="col-md-9" id="towerLocation">
             <div class="row">
-              <div class="playerAppear" class="col-xs-2">
-                <!-- where hero is -->
+              <div id="towerPlayerAppear" class="col-xs-2">
+                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
-              <div class="col-xs-5">
+              <div id="towerEnemyAppear"class="col-xs-5">
 
               </div>
             </div>
@@ -201,13 +210,16 @@
           <div class="col-md-9" id="trailerLocation">
             <img id="locationUfo" src="images/ufo2.png" alt="" />
             <div class="row">
-              <div class="playerAppear" class="col-xs-2">
-                <!-- where hero is -->
+              <div id="trailerPlayerAppear" class="col-xs-2">
+                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
-              <div class="col-xs-5">
+              <div id="trailerEnemyAppear" class="col-xs-5">
 
               </div>
             </div>
@@ -218,8 +230,11 @@
         <div class="row">
           <div class="col-md-9" id="castleLocation">
             <div class="row">
-              <div class="playerAppear" class="col-xs-2">
-                <!-- where hero is -->
+              <div class="castlePlayerAppear" class="col-xs-2">
+                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
