--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
+    <link href="css/hover.css" rel="stylesheet" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
@@ -11,6 +13,14 @@
     <title>RPG 2: Electric Boogalo</title>
   </head>
   <body>
+    <div class="container" id="titleScreenContainer">
+      <div id="gameTitle">
+        <img id="sword" src="images/sword.png" alt="">
+        <h1 id="title">The Legend of Taxidermia</h1>
+        <img src="images/leaf-banner.png" alt="">
+        <button id="gameStart" type="button" name="button">Start</button>
+      </div>
+    </div>
     <div class="container" id="startContainer">
       <div class="row" id="raiseCol">
         <div class="col-md-6">
@@ -110,34 +120,35 @@
     <div class="container" id="mapContainer">
       <div class="row" id="mapRow1">
         <div class="col-xs-6" id="mapRow1Column1">
+          <h4 id="mapTitle">The land of Taxidermia</h4>
         </div>
         <div class="col-xs-6" id="mapRow1Column2">
-          <img class="mapLocations" src="images/castle.png" id="oceanCastle"/>
+          <img href="#" class="hvr-float-shadow" class="mapLocations" src="images/castle.png" id="oceanCastle"/>
         </div>
       </div>
       <div class="row" id="mapRow2">
         <div class="col-xs-3 col-xs-offset-1" id="mapRow2Column1">
-          <img class="mapLocations" src="images/village.jpg" id="village"/>
+          <img href="#" class="hvr-float-shadow" class="mapLocations" src="images/village.jpg" id="village"/>
         </div>
         <div class="col-xs-4" id="mapRow2Column2">
-          <img class="mapLocations" src="images/house-over-water.png" id="houseOverWater"/>
+          <img href="#" class="hvr-float-shadow" class="mapLocations" src="images/house-over-water.png" id="houseOverWater"/>
         </div>
       </div>
       <div class="row" id="mapRow3">
         <div class="col-xs-3" id="mapRow3Column1">
-          <img class="mapLocations" src="images/ghost-house.gif" id="ghostHouse"/>
+          <img href="#" class="hvr-float-shadow" class="mapLocations" src="images/ghost-house.gif" id="ghostHouse"/>
         </div>
         <div class="col-xs-2 col-xs-offset-1" id="mapRow3Column2">
-          <img class="mapLocations" src="images/boat.png" id="boat"/>
+          <img href="#" class="hvr-float-shadow" class="mapLocations" src="images/boat.png" id="boat"/>
         </div>
         <div class="col-xs-3 col-xs-offset-3" id="mapRow3Column3">
-          <img class="mapLocations" src="images/tower.png" id="tower"/>
+          <img href="#" class="hvr-float-shadow" class="mapLocations" src="images/tower.png" id="tower"/>
           <!-- <button type="submit" name="button" id="towerButton"></button> -->
         </div>
       </div>
       <div class="row" id="mapRow4">
         <div class="col-xs-4 col-xs-offset-8" id="mapRow4Column1">
-          <img class="mapLocations" src="images/ufo.gif" id="ufo"/>
+          <img href="#" class="hvr-float-shadow" class="mapLocations" src="images/ufo.gif" id="ufo"/>
         </div>
       </div>
     </div>
@@ -220,6 +231,27 @@
 
               </div>
               <div id="trailerEnemyAppear" class="col-xs-5">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container locationHide" id="boatContainer">
+        <div class="row">
+          <div class="col-md-9" id="boatLocation">
+            <img id="ferryMan" src="images/ferryman_burned.png" alt="" />
+            <div class="row">
+              <div id="boatPlayerAppear" class="col-xs-2">
+                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
+              </div>
+              <div class="col-xs-5">
+
+              </div>
+              <div class="col-xs-5">
 
               </div>
             </div>
