--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
@@ -13,6 +14,7 @@
     <title>RPG 2: Electric Boogalo</title>
   </head>
   <body>
+    <iframe width="0px;" height="0px;" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/290593608&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
     <div class="container" id="titleScreenContainer">
       <div id="gameTitle">
         <img id="sword" src="images/sword.png" alt="">
@@ -170,7 +172,7 @@
 
               </div>
               <div id="villageEnemyAppear"class="col-xs-5">
-
+                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -190,7 +192,7 @@
 
               </div>
               <div id="hauntedEnemyAppear"class="col-xs-5">
-
+                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -210,7 +212,7 @@
 
               </div>
               <div id="towerEnemyAppear"class="col-xs-5">
-
+                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -231,7 +233,7 @@
 
               </div>
               <div id="trailerEnemyAppear" class="col-xs-5">
-
+                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -252,7 +254,7 @@
 
               </div>
               <div class="col-xs-5">
-
+                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -272,7 +274,7 @@
 
               </div>
               <div class="col-xs-5">
-
+                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
