add swamp house background, fix castle background, change locationHero classes, fix bard tale function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="container" id="titleScreenContainer">
       <div id="gameTitle">
         <img id="sword" src="images/sword.png" alt="">
-        <h1 id="title">The Legend of Taxidermia</h1>
+        <h1 id="title">The Legend of</h1>
+        <h1 id="title">Taxidermia</h1>
         <img src="images/leaf-banner.png" alt="">
         <button id="gameStart" type="button" name="button">Start</button>
       </div>
@@ -163,16 +164,16 @@
           <div class="col-md-9" id="villageLocation">
             <div class="row">
               <div id="villagePlayerAppear" class="col-xs-2">
-                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
-                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
-                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
-                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
+                <img class="Tinks villageHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex villageHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner villageHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned villageHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
               <div id="villageEnemyAppear"class="col-xs-5">
-                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
+                <img class="Turkerus villageEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -183,16 +184,16 @@
           <div class="col-md-9" id="hauntedLocation">
             <div class="row">
               <div id="hauntedPlayerAppear" class="col-xs-2">
-                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
-                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
-                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
-                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
+                <img class="Tinks hauntedHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex hauntedHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner hauntedHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned hauntedHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
               <div id="hauntedEnemyAppear"class="col-xs-5">
-                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
+                <img class="Turkerus hauntedEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -203,16 +204,16 @@
           <div class="col-md-9" id="towerLocation">
             <div class="row">
               <div id="towerPlayerAppear" class="col-xs-2">
-                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
-                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
-                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
-                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
+                <img class="Tinks towerHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex towerHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner towerHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned towerHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
               <div id="towerEnemyAppear"class="col-xs-5">
-                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
+                <img class="Turkerus towerEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -224,16 +225,16 @@
             <img id="locationUfo" src="images/ufo2.png" alt="" />
             <div class="row">
               <div id="trailerPlayerAppear" class="col-xs-2">
-                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
-                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
-                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
-                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
+                <img class="Tinks trailerHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex trailerHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner trailerHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned trailerHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
               <div id="trailerEnemyAppear" class="col-xs-5">
-                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
+                <img class="Turkerus trailerEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -245,16 +246,15 @@
             <img id="ferryMan" src="images/ferryman_burned.png" alt="" />
             <div class="row">
               <div id="boatPlayerAppear" class="col-xs-2">
-                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
-                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
-                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
-                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
+                <img class="Tinks boatHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex boatHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner boatHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned boatHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
               <div class="col-xs-5">
-                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
@@ -265,16 +265,36 @@
           <div class="col-md-9" id="castleLocation">
             <div class="row">
               <div class="castlePlayerAppear" class="col-xs-2">
-                <img class="Tinks locationHero" src="images/druid_burned.png" alt="" />
-                <img class="Tex locationHero" src="images/cleric_burned.png" alt="" />
-                <img class="Stunner locationHero" src="images/taxidermy-pikachu_burned.png" alt="" />
-                <img class="Ned locationHero" src="images/necromancer_burned.png" alt="" />
+                <img class="Tinks castleHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex castleHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner castleHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned castleHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div class="col-xs-5">
 
               </div>
               <div class="col-xs-5">
-                <img class="Turkerus locationEnemy" src="images/turkerus_burned.png" alt="" />
+                <img class="Turkerus castleEnemy" src="images/turkerus_burned.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container locationHide" id="swampContainer">
+        <div class="row">
+          <div class="col-md-9" id="swampLocation">
+            <div class="row">
+              <div class="castlePlayerAppear" class="col-xs-2">
+                <img class="Tinks swampHero" src="images/druid_burned.png" alt="" />
+                <img class="Tex swampHero" src="images/cleric_burned.png" alt="" />
+                <img class="Stunner swampHero" src="images/taxidermy-pikachu_burned.png" alt="" />
+                <img class="Ned swampHero" src="images/necromancer_burned.png" alt="" />
+              </div>
+              <div class="col-xs-5">
+
+              </div>
+              <div class="col-xs-5">
+                <img class="Turkerus swampEnemy" src="images/turkerus_burned.png" alt="" />
               </div>
             </div>
           </div>
