--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <title>RPG 2: Electric Boogalo</title>
   </head>
   <body>
-    <iframe width="0px;" height="0px;" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/290593608&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
     <div class="container" id="titleScreenContainer">
       <div id="gameTitle">
         <img id="sword" src="images/sword.png" alt="">
@@ -121,6 +120,7 @@
       </form>
     </div>
     <div class="container" id="mapContainer">
+
       <div class="row" id="mapRow1">
         <div class="col-xs-6" id="mapRow1Column1">
           <h4 id="mapTitle">The land of Taxidermia</h4>
@@ -157,7 +157,7 @@
     </div>
     <div class="container" id="locationContainer">
       <div class="row">
-        <button id="back" type="button" name="button">BUTTON</button>
+
       </div>
       <div class="container locationHide" id="villageContainer">
         <div class="row">
@@ -301,6 +301,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="row">
+        <button id="attack" type="button" name="button">attack!</button>
+        <button id="back" type="button" name="button">escape</button>
       </div>
     </div>
   </body>
